@@ -59,6 +59,7 @@
 #include <stdlib.h>
 #include <math.h>
 
+#include <QApplication>
 #include <QDomDocument>
 #include <QFileInfo>
 
@@ -860,10 +861,22 @@ bool drumkv1_lv2::patch_put ( uint32_t ndelta, uint32_t type )
 // drumkv1_lv2 - LV2 desc.
 //
 
+static QApplication *drumkv1_lv2_qapp_instance = nullptr;
+static unsigned int  drumkv1_lv2_qapp_refcount = 0;
+
 static LV2_Handle drumkv1_lv2_instantiate (
 	const LV2_Descriptor *, double sample_rate, const char *,
 	const LV2_Feature *const *host_features )
 {
+	if (qApp == nullptr && drumkv1_lv2_qapp_instance == nullptr) {
+		static int s_argc = 1;
+		static const char *s_argv[] = { __func__, nullptr };
+		drumkv1_lv2_qapp_instance = new QApplication(s_argc, (char **) s_argv);
+	}
+
+	if (drumkv1_lv2_qapp_instance)
+		drumkv1_lv2_qapp_refcount++;
+
 	return new drumkv1_lv2(sample_rate, host_features);
 }
 
@@ -906,6 +919,11 @@ static void drumkv1_lv2_cleanup ( LV2_Handle instance )
 	drumkv1_lv2 *pPlugin = static_cast<drumkv1_lv2 *> (instance);
 	if (pPlugin)
 		delete pPlugin;
+
+	if (drumkv1_lv2_qapp_instance && --drumkv1_lv2_qapp_refcount == 0) {
+		delete drumkv1_lv2_qapp_instance;
+		drumkv1_lv2_qapp_instance = nullptr;
+	}
 }
 
 
